--- a/config/content.htm
+++ b/config/content.htm
@@ -281,7 +281,7 @@ doc["snake"].bind("click",snake.do)
 <p></p>
 <p></p>
 <p></p>
-<h2>Run</h2>
+<h2>run2</h2>
 <p>第一種在網頁執行 Brython 程式的方法, 是使用者在網際程式編輯區輸入 Brython 程式碼, 必須手動按下 Run 才能執行.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
