--- a/content/Exam.html
+++ b/content/Exam.html
@@ -139,16 +139,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='HW1.html'>Next</a> >> HW1<br /><h1>About</h1>
-<p></p>
-<hr/>
-<p>demo 學號與帳號: mdecourse</p>
-<p>網站倉儲: <a href="https://github.com/kolas911205/cp2021_hw">https://github.com/kolas911205/cp2021_hw</a></p>
-<p>網站連結: <a href="https://kolas911205.github.io/cp2021_hw/">https://kolas911205.github.io/cp2021_hw/</a></p>
-<p>其他與個人或作業相關資料說明或介紹:</p>
-<p>mdecourse 所屬的實驗室: <a href="https://mde.tw">https://mde.tw</a></p>
-<p></p>
-<br /> <a href='HW1.html'>Next</a> >> HW1</div>
+    <div id="tipue_search_content">Math << <a href='Math.html'>Previous</a> <a href='w13.html'>Next</a> >> w13<br /><h1>Exam</h1>
+<br />Math << <a href='Math.html'>Previous</a> <a href='w13.html'>Next</a> >> w13</div>
         
     <!-- footer -->
       <div class="container">
