--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -266,8 +266,7 @@ snake= button2(snake_url)
 doc["snake"].bind("click",snake.do)
 ################################## snake end
 </script>
-</p>
-<h1>HW2</h1>
+</p><h1>HW2</h1>
 <p></p>
 <p></p>
 <hr/>
@@ -1061,7 +1060,7 @@ function doSave(storage_id, filename){
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
 </p>
-<p><button id="random">random</button></p>
+<p><button id="random">random</button><button id="random2">random2</button></p>
 <p><!-- ######################  editor1 開始 ###################### --></p>
 <p><!-- 用來顯示程式碼的 editor 區域 --></p>
 <div id="kw_editor1" style="width: 600px; height: 300px;"></div>
@@ -1146,6 +1145,9 @@ class button2:
 random_url = "https://gist.githubusercontent.com/kolas911205/5a388cc3b65b377fec4ceec6e75ff859/raw/fe9946c272550ace3594e013274f8dffcf9fb68e/w13.py"
 random = button2(random_url)
 doc["random"].bind('click', random.do)
+random2_url = "https://gist.githubusercontent.com/kolas911205/d5e0361ab649052019e5fcbf5b2b125e/raw/90ae01e0c05043c8195a3fe9d96e69659fd84cae/w13-2.py"
+random2 = button2(random2_url)
+doc["random2"].bind('click', random2.do)
 </script>
 </p><h1>Final Project</h1>
 <p>Final Project 佔學期成績 30%</p>
