--- a/content/run1.html
+++ b/content/run1.html
@@ -288,8 +288,7 @@ snake= button2(snake_url)
 doc["snake"].bind("click",snake.do)
 ################################## snake end
 </script>
-</p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
+</p><br />HW1 << <a href='HW1.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
         
     <!-- footer -->
       <div class="container">
