--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -266,7 +266,8 @@ snake= button2(snake_url)
 doc["snake"].bind("click",snake.do)
 ################################## snake end
 </script>
-</p><h1>HW2</h1>
+</p>
+<h1>HW2</h1>
 <p></p>
 <p></p>
 <hr/>
@@ -1078,6 +1079,8 @@ function doSave(storage_id, filename){
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
 <!-- 這裡的畫布 id 為 brython_div -->
 <div id="brython_div"></div>
+<div></div>
+<h1>H3</h1>
 <p><!-- ######################  editor1 結束 ###################### --></p>
 <!-- 以下可以開始利用 editor1 的設定編寫對應 Brython 程式 -->
 <script type="text/python3">
@@ -1149,7 +1152,8 @@ random2_url = "https://gist.githubusercontent.com/kolas911205/d5e0361ab649052019
 random2 = button2(random2_url)
 doc["random2"].bind('click', random2.do)
 </script>
-</p><h1>Final Project</h1>
+</p>
+<h1>Final Project</h1>
 <p>Final Project 佔學期成績 30%</p>
 <p><a href="https://github.com/mdecourse/cp2021/discussions/11">Final Project 具體項目成果回報區</a></p>
 <p>利用 Brython 寫一個會<span style="background-color: #ffff99;">令人想玩</span>的網際遊戲.</p>
